<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="90"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about_app"
        android:orderInCategory="100"
        android:title="@string/about_APP"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_me"
        android:orderInCategory="100"
        android:title="@string/about_me"
        app:showAsAction="never" />

</menu>