<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="1dp"
    app:cardCornerRadius="1dp"
    app:cardElevation="3dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/description"
            android:textColor="#494949"
            android:maxLines="2"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_type"
                android:drawablePadding="2dp"
                android:text="@string/android"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/who"
                android:drawableLeft="@drawable/ic_action_who"
                android:drawablePadding="2dp"
                android:text="@string/who"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/time"
                android:drawableLeft="@drawable/ic_action_time"
                android:drawablePadding="2dp"
                android:text="@string/time"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>